# gilear

./: .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .prettierignore  CONTRIBUTING.md  ROADMAP.md  STYLEGUIDE.md  cabal.project.debug  cabal.project.documentation  cabal.project.release  devenv.nix  fourmolu.yaml  hie.yaml  package-lock.json  package.json
.github/actions/setup-actionlint/: action.yaml
.github/actions/setup-cabal-fmt/: action.yaml
.github/actions/setup-fourmolu/: action.yaml
.github/actions/setup-shellcheck/: action.yaml
.github/workflows/: ci.yaml
dockerfiles/: Dockerfile.valgrind
prototypes/gilear-animate-ast/: CHANGELOG.md  README.md  gilear-animate-ast.cabal
prototypes/gilear-animate-ast/app/: Main.hs
prototypes/gilear-animate-ast/sample/: sample-1.dot  sample-2.dot  sample-2.gilear
prototypes/gilear-w/: .gitignore  CHANGELOG.md  EffW.conor  EffW.hs  GilearW.agda  Indexed.agda  README.md  Setup.hs  gilear-w.agda-lib  gilear-w.cabal  rewrite-rules.yaml
prototypes/gilear-w/autogen/: GilearW.hs  libraries
prototypes/gilear-w/autogen/GilearW/Internal/: Indexed.hs
prototypes/gilear-w/src/: GilearW.agda
prototypes/gilear-w/src/Gilear/: W.hs
prototypes/gilear-w/src/GilearW/Internal/: Common.agda  Indexed.agda  Ix.agda  Ix.hs  Name.agda  Time.agda  Timed.agda
prototypes/gilear-w/src/GilearW/Internal/Timed/: Monad.agda
prototypes/gilear-w/src/GilearW/Internal/Timed/Monad/: Free.agda
scripts/: build-haddock.sh  dev-dependencies.txt  format-cabal-fmt.sh  format-fourmolu.sh  lint-cabal.sh  pre-commit.sh  test-cabal-docspec.sh  test-valgrind.sh
scripts/lint-cabal/: lint-cabal.cabal  lint-cabal.hs
scripts/lint-cabal/src/Lint/: Cabal.hs
