cabal-version: 3.4
name:          lint-cabal
version:       0.0.0.0
license:       CC-BY-NC-ND-4.0
synopsis:      Linter for Cabal files
description:
  See <https://github.com/wenkokke/gilear/blob/main/scripts/lint-cabal/lint-cabal.hs>

author:        Wen Kokke
maintainer:    wenkokke@users.noreply.github.com
category:      Development
build-type:    Simple

common language
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

executable lint-cabal
  import:           language
  main-is:          lint-cabal.hs
  build-depends:
    , base          >=4.13 && <5
    , bytestring    >=0.12 && <0.13
    , Cabal-syntax  >=3.12 && <4
    , Glob          >=0.10 && <0.11
    , mtl           >=2.3  && <2.4
    , transformers  >=0.6  && <0.7

  default-language: Haskell2010
