cabal-version: 3.4
name:          lint-cabal
version:       0.0.0.0
license:
synopsis:      Linter for Cabal files
description:
  See <https://github.com/wenkokke/gilear/blob/main/scripts/lint-cabal/lint-cabal.hs>

author:        Wen Kokke
maintainer:    wenkokke@users.noreply.github.com
category:      Development
build-type:    Simple

common language
  ghc-options:        -Wall -Wunused-packages
  default-language:   GHC2021
  default-extensions: ImportQualifiedPost

library
  import:          language
  exposed-modules: Lint.Cabal
  build-depends:
    , base          >=4.13 && <5
    , bytestring    >=0.12 && <0.13
    , Cabal-syntax  >=3.12 && <4
    , mtl           >=2.3  && <2.4
    , transformers  >=0.6  && <0.7

  hs-source-dirs:  src

executable lint-cabal
  import:        language
  main-is:       lint-cabal.hs
  build-depends:
    , base          >=4.13 && <5
    , Cabal-syntax  >=3.12 && <4
    , Glob          >=0.10 && <0.11
    , lint-cabal
    , mtl           >=2.3  && <2.4
